# aegir

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  REUSE.toml  activate.sh  justfile  pixi.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml  pixi-build.yml  update-lock-files.yml  update-shared-configs.yml
benchmarks/: pythia8_benchmark.cpp
ci/: metrics_config.yaml
docs/: benchmarks.md  geant4_integration.md  genie.md  neutrino_flux.md
doxygen/: Doxyfile
scripts/: bench_baseline.sh  compare_histograms.py  convert_fairship_nu_flux.py  count_entries.py  determinism.sh  file_source_roundtrip.sh  gdml_fix_element_names.py  gdml_target_nuclei.py  plot_muon_momentum.py  pythia_exhaustion.sh  run_benchmark.py  smoke.sh
src/: chrome_trace.hpp  detector_construction.hpp  field_covfie_provider.cpp  field_null_provider.cpp  file_particle_source.cpp  file_source.cpp  fixed_target_source.cpp  geant4_module.cpp  geant4_sim_core.hpp  genie_reader_source.cpp  geometry_builtin_provider.cpp  geometry_gdml_provider.cpp  geometry_geomodel_provider.cpp  geometry_source.hpp  math_utils.hpp  mc_particle_source.hpp  particle_gun_source.cpp  philox_rng.hpp  provider_helpers.hpp  pythia8_source.cpp  pythia_common.hpp  sim_output_module.cpp
workflows/: file_read.jsonnet  file_read_sim.jsonnet  file_write_mc.jsonnet  file_write_sim.jsonnet  fixed_target_mt.jsonnet  fixed_target_mt_bench.jsonnet  fixed_target_st.jsonnet  genie_reader_st.jsonnet  gun_mt.jsonnet  gun_mt_bench.jsonnet  gun_mt_field_smoke.jsonnet  gun_mt_noop.jsonnet  gun_noop.jsonnet  gun_only.jsonnet  gun_st.jsonnet  gun_st_bench.jsonnet  gun_st_crossing.jsonnet  gun_st_field.jsonnet  gun_st_field_local.jsonnet  gun_st_field_smoke.jsonnet  gun_st_full.jsonnet  gun_st_gdml.jsonnet  gun_st_geomodel.jsonnet  gun_st_nofield_smoke.jsonnet  lib.libsonnet  pythia8_mt.jsonnet  pythia8_mt_bench.jsonnet  pythia8_noop.jsonnet  pythia8_only.jsonnet  pythia8_st.jsonnet  sensitive_volumes_explicit.libsonnet  sensitive_volumes_patterns.jsonnet  transport_muons_through_geometry.jsonnet
